fixed section 1, 2 end header

--- a/css/style.css
+++ b/css/style.css
@@ -50,20 +50,25 @@ img {
   color: var(--slate-color);
 }
 
-.offscreen {
-  border: 0;
-  clip: rect(0 0 0 0);
-  height: 1px;
-  margin: -1px;
-  overflow: hidden;
-  padding: 0;
+.visually-hidden {
   position: absolute;
   width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
 /* #endregion */
 
 .container {
-  max-width: 1128px;
+  max-width: 1158px;
+  padding-top: 15px;
+  padding-bottom: 15px;
   margin: 0 auto;
 
   display: flex;
@@ -71,7 +76,6 @@ img {
 }
 
 .container-main {
-  padding: 120px 0;
   flex-direction: column;
 }
 
@@ -87,6 +91,10 @@ img {
   gap: 16px;
 }
 
+.header {
+  border-bottom: 1px solid var(--cornflower)
+}
+
 .logo {
   font-family: "Raleway", sans-serif;
   font-weight: 700;
@@ -96,11 +104,7 @@ img {
   text-transform: uppercase;
 
   color: var(--iris-color);
-}
-
-.logo-footer {
-  padding-top: 24px;
-  padding-bottom: 24px;
+  margin-right: 76px;
 }
 
 .logo-dark {
@@ -125,13 +129,12 @@ img {
 
 .nav {
   display: flex;
+  align-items: center;
+  padding-top: 24px;
+  padding-bottom: 24px;
 }
 
 .nav-list {
-  margin-left: 76px;
-  padding-top: 24px;
-  padding-bottom: 24px;
-
   gap: 40px;
 }
 
@@ -176,6 +179,9 @@ img {
   background-color: var(--navy-blue-color);
   color: var(--white-color);
   text-align: center;
+
+  padding-top: 188px;
+  padding-bottom: 188px;
 }
 
 .hero-title {
@@ -184,7 +190,7 @@ img {
   line-height: 1.07;
   letter-spacing: 0.02em;
 
-  width: 496px;
+  max-width: 496px;
 }
 
 .hero-button {
@@ -196,7 +202,7 @@ img {
   line-height: 1.5;
   letter-spacing: 0.04em;
 
-  width: 169px;
+  min-width: 169px;
   height: 56px;
   border-radius: 4px;
   box-shadow: 0px 4px 4px 0px #00000026;
@@ -213,12 +219,17 @@ img {
 }
 
 .benefits-item {
+  padding-top: 120px;
+  padding-bottom: 120px;
   text-align: left;
   width: calc((100% - 3 * var(--gap)) / 4);
 }
 
 .team-section {
   background-color: var(--cloud-color);
+
+  padding-top: 120px;
+  padding-bottom: 120px;
 }
 
 .item-team {
@@ -226,8 +237,17 @@ img {
   text-align: center;
 
   height: 380px;
-  border-radius: 4px;
+  border-radius: 0px 0px 4px 4px;
   box-shadow: 0px 1px 6px 0px #2e2f4214;
+}
+
+.employee_inform {
+  padding-top: 32px;
+  padding-bottom: 32px;
+}
+
+.employee_position {
+  text-align: center;
 }
 
 .section-title {
@@ -250,8 +270,8 @@ img {
   letter-spacing: 0.02em;
   color: var(--navy-blue-color);
 
+  text-align: center;
   margin-bottom: 8px;
-  margin-top: 32px;
 }
 
 .item-content {
@@ -263,6 +283,11 @@ img {
 
 .benefits-item > .item-title {
   margin-top: 0;
+}
+
+.portfolio-section {
+  padding-top: 120px;
+  padding-bottom: 120px;
 }
 
 .portfolio-item {
