--- a/css/style.css
+++ b/css/style.css
@@ -56,12 +56,13 @@ img {
   position: absolute;
   width: 1px;
   height: 1px;
-  padding: 0;
-  margin: 0;
-  overflow: hidden;
-  clip: rect(0, 0, 0, 0);
-  white-space: nowrap;
+  margin: -1px;
   border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
 
 
@@ -143,6 +144,7 @@ img {
   text-transform: uppercase;
 
   color: var(--iris-color);
+  display: inline-block;
 }
 
 .logo-header {
@@ -150,7 +152,6 @@ img {
 }
 
 .logo-footer {
-  display: inline-block;
   margin-bottom: 16px;
 }
 
@@ -353,9 +354,5 @@ img {
   text-align: left;
   color: var(--cloud-color);
   max-width: 264px;
-}
-
-.footer > a {
-  display: inline-block;
 }
 /* #endregion */
