--- a/css/style.css
+++ b/css/style.css
@@ -51,8 +51,8 @@ img {
   border: 0;
   padding: 0;
   white-space: nowrap;
+  clip-path: inset(100%);
   clip: rect(0 0 0 0);
-  clip-path: inset(50%);
   overflow: hidden;
 }
 
@@ -108,20 +108,24 @@ img {
   max-width: 1158px;
   padding: 0 15px;
   margin: 0 auto;
+}
 
+.container-header {
   display: flex;
   justify-content: space-between;
 }
 
-.container-benefits {
-  flex-direction: column;
-}
-
 .container-hero {
+  display: flex;
+  justify-content: space-between;
   flex-direction: column;
   align-items: center;
   gap: 48px;
 }
+.container-benefits {
+  flex-direction: column;
+}
+
 
 .container-team,
 .container-portfolio{
